# Software-Engineering

./: .gitignore  Aenderungen  CMakeLists.txt  CocktailPro.cpp  CocktailPro.h  CocktailZubereiter.cpp  CocktailZubereiter.h  DeviceVerwalter.cpp  DeviceVerwalter.h  Dosierer.cpp  Dosierer.h  Entleerer.cpp  Entleerer.h  InternalDevice.cpp  InternalDevice.h  MischbaresRezeptbuch.cpp  MischbaresRezeptbuch.h  Mixer.cpp  Mixer.h  Observer.h  Recipe.cpp  Recipe.h  RecipeBook.cpp  RecipeBook.h  RecipeStep.cpp  RecipeStep.h  Schuettler.cpp  Schuettler.h  Stampfer.cpp  Stampfer.h  Subject.cpp  Subject.h  Timer.cpp  Timer.h  VorhandeneZutaten.cpp  VorhandeneZutaten.h  Waage.cpp  Waage.h  makefile.mak  readme.md  (+1 more)
Model/: SE_CocktailProLegacy.mdzip
Requirements/: User_Stories_und_Schätzungen.xlsx
Test/: CocktailPro_Test.cpp  CocktailZubereiter_Test.cpp  DeviceVerwalterTest.cpp  DosiererTest.cpp  EntleererTest.cpp  MischbaresRezeptbuch_Test.cpp  Mixer_Test.cpp  RecipeBook_Test.cpp  RecipeStep_Test.cpp  Recipe_Test.cpp  Schuettler_Test.cpp  Stampfer_Test.cpp  Subject_Test.cpp  Timer_Test.cpp  VorhandeneZutaten_Test.cpp  Waage_Test.cpp
config/: cccc.opt
main/: main.cpp
reports/: gtest.xml
